fix another spacing issue

--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -63,7 +63,6 @@ h1.firstheading {
 
 	.col-sm-12 {
 		width: 100%;
-		margin-bottom: 10px;
 	}
 }
 
